# cangjie_tools

./: LICENSE  OAT.xml  README.OpenSource  README.md  README_OpenHarmony.md  README_zh.md
.gitcode/: CODEOWNERS
cangjie-language-server/: .clang-format  .gitignore  CMakeLists.txt
cangjie-language-server/doc/: developer_guide.md  user_guide.md
cangjie-language-server/generate/: index.fbs
cangjie-language-server/src/: .gitignore  CMakeLists.txt
cangjie-language-server/src/json-rpc/: CMakeLists.txt  Common.h  CompletionType.h  Protocol.cpp  Protocol.h  ProtocolContent.h  StdioTransport.cpp  StdioTransport.h  Transport.h  URI.cpp  URI.h  WorkSpaceSymbolType.cpp  WorkSpaceSymbolType.h
cangjie-language-server/test/: CMakeLists.txt  main.cpp  testCase.list
cangjie-language-server/test/unitTests/: CMakeLists.txt
cangjie-language-server/test/unitTests/json-rpc/: ProtocolTest.cpp
cangjie-language-server/test/unitTests/languageserver/: ArkASTTest.cpp  CompilerCangjieProjectTest.cpp
cangjie-language-server/test/unitTests/languageserver/capabilities/fileRefactor/: FileMoveTest.cpp  FileRefactorTest.cpp
cangjie-language-server/test/unitTests/languageserver/capabilities/hover/: HoverMarkdownTest.cpp
cangjie-language-server/test/unitTests/languageserver/capabilities/overrideMethods/: FindOverrideMethodsUtilsTest.cpp
cangjie-language-server/test/unitTests/languageserver/capabilities/refactor/: ExtractFunctionTest.cpp  ExtractInterfaceTest.cpp  ExtractVariableTest.cpp  IntroduceConstantTest.cpp  IntroduceFieldTest.cpp  IntroduceParameterTest.cpp  RefactorTweakMetadataTest.cpp
cangjie-language-server/test/unitTests/languageserver/capabilities/semanticHighlight/: SemanticHighlightImplTest.cpp
cangjie-language-server/test/unitTests/languageserver/common/: BasicHelperTest.cpp  FindDeclUsageTest.cpp  ItemResolverUtilTest.cpp  SyscapCheckTest.cpp  UtilsTest.cpp  UtilsTest2.cpp
cangjie-language-server/test/unitTests/languageserver/index/: IndexStorageTest.cpp  MemIndexTest.cpp
cangjie-language-server/test/unitTests/languageserver/logger/: CrashReporterTest.cpp  LoggerTest.cpp
cangjie-language-server/test/unitTests/languageserver/sql/wrapper/: BackupTest.cpp  BindTest.cpp  ColumnTest.cpp  ConfigureTest.cpp  ConnectionTest.cpp  ExceptionTest.cpp  FunctionTest.cpp  MemoryTest.cpp  RegexpTest.cpp  ResultTest.cpp  SQLiteAPITest.cpp  StatementTest.cpp  TransactionTest.cpp  ValueTest.cpp
cjcov/: cjpm.toml
cjcov/doc/: developer_guide.md  developer_guide_zh.md  user_guide.md
cjcov/src/: main.cj
cjfmt/: CMakeLists.txt
cjfmt/config/: cangjie-format.toml
cjfmt/doc/: developer_guide.md  developer_guide_EN.md  developer_guide_zh.md  user_guide.md
cjfmt/src/: CMakeLists.txt  main.cpp
cjhead/: CMakeLists.txt
cjhead/fmt/: CMakeLists.txt
cjhead/include/: CJHeadCompilerInstance.h  CJHeadCompilerInvocation.h  CJHeadParam.h  CJHeadUtil.h  FileHandler.h  HeadFileVisitor.h
cjhead/src/: CJHeadCompilerInstance.cpp  CJHeadCompilerInvocation.cpp  CJHeadUtil.cpp  CMakeLists.txt  FileHandler.cpp  HeadFileVisitor.cpp  main.cpp
cjlint/: CMakeLists.txt
cjlint/config/: CMakeLists.txt  cjlint_rule_list.json  dataflow_rule_G_CHK_03.json  dataflow_rule_G_OTH_01.json  exclude_lists.json  structural_rule_G_CHK_02.json  structural_rule_G_CHK_04.json  structural_rule_G_ERR_02.json  structural_rule_G_FIO_02.json  structural_rule_G_OTH_02.json  structural_rule_G_OTH_03.json  structural_rule_G_OTH_04.json  structural_rule_G_SEC_01.json  structural_rule_G_SER_01.json  structural_rule_G_SYN_01.json  structural_rule_P_03.json
cjlint/doc/: developer_guide.md  developer_guide_zh.md  user_guide.md
cjlint/src/: CMakeLists.txt  Cjlint.cpp  Cjlint.h  main.cpp
cjpm/: build.cj  cjpm.toml
cjpm/config/: cangjie-repo.toml  cjpm-config.toml
cjpm/cpp/: CMakeLists.txt  cross-windows-toolchain.cmake  llvm-mingw-toolchain.cmake
cjpm/doc/: developer_guide.md  developer_guide_zh.md  user_guide.md  user_guide_EN.md  user_guide_zh.md
cjpm/src/: main.cj
cjprof/: .gitignore  CMakeLists.txt  demo1.data  migration_plan.md  validation_plan.md
cjprof/doc/: user_guide.md  user_guide_zh.md
cjprof/include/: Cjprof.h
cjprof/src/: CMakeLists.txt  Cjprof.cpp  main.cpp
cjprof/src/Analyzer/: CMakeLists.txt  DatabaseCache.cpp  DatabaseSchema.cpp  HeapAnalyzer.cpp  HttpHandlers.cpp  HttpServer.cpp  Logger.cpp  SqliteDb.cpp
cjprof/src/Commands/: CMakeLists.txt  Heap.cpp  HeapCtor.cpp  Record.cpp  Report.cpp
cjprof/src/Data/: CMakeLists.txt  Hprof.cpp  HprofParser.cpp
cjprof/src/Recorder/: CMakeLists.txt  LinuxRecorder.cpp
cjprof/src/Reporter/: CMakeLists.txt  FlameGraph.cpp  FlatReporter.cpp
cjprof/src/Symbol/: CMakeLists.txt  Elf.cpp
cjprof/tests/: CMakeLists.txt  test_cjprof_diff.cpp  test_cjprof_expand.cpp  test_cjprof_smoke.cpp
cjtrace-recover/: .gitignore  CMakeLists.txt
cjtrace-recover/cmake/: mingw_x86_64_toolchain.cmake
cjtrace-recover/doc/: developer_guide.md  user_guide.md
cjtrace-recover/src/: cjtrace-recover.cj
hyperlangExtension/doc/: developer_guide.md  user_guide.md  user_guide_zh.md
hyperlangExtension/src/: main.cj
hyperlangExtension/tests/: test.py  test.sh  testing.md
(+3906 files in other folders)
